# squirrel

./: CMakeLists.txt
sq/: CMakeLists.txt
sqstdlib/: CMakeLists.txt
squirrel/: CMakeLists.txt
